# toulligQC

./: .gitignore  CHANGES.md  Dockerfile  README.md  environment.yml  pyproject.toml  release-please-config.json
.github/workflows/: integration-test.yml  lint.yml  release-please.yml  semantic-pull-request.yml
docs/demo/: run-toulligqc-demo-with-docker.sh  run-toulligqc-demo.sh
test/: config.py  test_sequencing_summary_extractor.py  toulligqc-compare-reports.py
test_data/integration/: report.data.expected
toulligqc/: bam_extractor.py  common.py  common_statistics.py  configuration.py  extractor_common.py  fast5_extractor.py  fastq_bam_common.py  fastq_extractor.py  html_report_generator.py  plotly_graph_common.py  plotly_graph_generator.py  plotly_graph_onedsquare_generator.py  pod5_extractor.py  report_data_file_generator.py  sequencing_summary_extractor.py  sequencing_summary_onedsquare_extractor.py  sequencing_telemetry_extractor.py  toulligqc.py  toulligqc_info_extractor.py
